@@ -1,17 +1,19 @@
 package rest_with_spring_boot_and_java.unittests.mapper;
 
-
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import rest_with_spring_boot_and_java.data.dto.PersonDTO;
-import rest_with_spring_boot_and_java.model.Person;
-import rest_with_spring_boot_and_java.unittests.mapper.mocks.MockPerson;
-
-import java.util.List;
-
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static rest_with_spring_boot_and_java.mapper.ObjectMapper.parseObject;
 import static rest_with_spring_boot_and_java.mapper.ObjectMapper.parseObjectsLists;
+
+import java.util.List;
+
+
+import rest_with_spring_boot_and_java.unittests.mapper.mocks.MockPerson;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
+
+import rest_with_spring_boot_and_java.data.dto.PersonDTO;
+import rest_with_spring_boot_and_java.model.Person;
 
 public class ObjectMapperTests {
     MockPerson inputObject;
@@ -34,7 +36,7 @@ public class ObjectMapperTests {
     @Test
     public void parseEntityListToDTOListTest() {
         List<PersonDTO> outputList = parseObjectsLists(inputObject.mockEntityList(), PersonDTO.class);
-        PersonDTO outputZero = outputList.get(0);
+        PersonDTO outputZero = outputList.getFirst();
 
         assertEquals(Long.valueOf(0L), outputZero.getId());
         assertEquals("First Name Test0", outputZero.getFirstName());
@@ -72,7 +74,7 @@ public class ObjectMapperTests {
     @Test
     public void parserDTOListToEntityListTest() {
         List<Person> outputList = parseObjectsLists(inputObject.mockDTOList(), Person.class);
-        Person outputZero = outputList.get(0);
+        Person outputZero = outputList.getFirst();
 
         assertEquals(Long.valueOf(0L), outputZero.getId());
         assertEquals("First Name Test0", outputZero.getFirstName());
